java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testNonAbstractClass85806-hints.pass
Make class AbstractClass4 abstract
